Fix mobile viewport clipped issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,7 @@
 html,
 body,
 #root {
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
